<resources>
    <string name="app_name">Semonaid</string>
    <string name="tagline">A Second Chance at Saving</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicG9vcm5paSIsImEiOiJjazFvZ3FydGgwbTN3M2xsdmJrMXk0OTdlIn0.WsvBou-iMQdPLidVQkvFrw</string>


    <!--  Menu items  -->
    <string name="menu_budgeting">Budget Calculator</string>

    <!-- Budget   -->
    <string name="budget">Budget</string>
    <string name="total">Total : $</string>
    <string name="save_my_earnings">Save My Earnings</string>
    <string name="budget_calculator">Budget Calculator</string>
    <string name="services">Get Assistance</string>

    <string name="income">Income</string>
    <string name="heroCategory">NONE: Is that a trick?</string>
    <string name="housing_exp">Household Expenses</string>
    <string name="go_save">Go to Saving Tips</string>
    <string name="go_save_category">Saving Tips for Category</string>
    <string name="go_service">Go To Services</string>
    <string name="go_service_category">Services for Category</string>
    <string name="utilities">Utilities</string>

    <string name="frequency">Frequency</string>
    <string-array name="frequency_array">
        <item>Weekly</item>
        <item>Fortnightly </item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="income_details">Income Details</string>
    <string name="income_govt">Government Benefits</string>
    <string name="income_other">Other Income</string>

    <string name="household_rent">Rent</string>
    <string name="household_groceries">Groceries</string>
    <string name="household_other">Other Expenses</string>

    <string name="Bills">Bills</string>
    <string name="bills_gas">Gas bill</string>
    <string name="bills_water">Water bill</string>
    <string name="bills_electricity">Electricity bill</string>
    <string name="bills_phone">Phone bills</string>
    <string name="bills_internet">Internet bills</string>
    <string name="bills_insurance">Insurance</string>
    <string name="bills_loans">Loans</string>
    <string name="bills_other">Other Bills</string>


    <string name="personal_clothing">Clothing</string>
    <string name="personal_doctor">Doctors and Medicine</string>
    <string name="personal_other">Other</string>
    <string name="personal_entertainment">Entertainment</string>
    <string name="personal_pet">Pet care</string>


    <string name="transport_licence">Rego and licence</string>
    <string name="transport_public">Public Transport</string>
    <string name="transport_other">Other</string>

    <!-- Budget Menu -->
    <string name="menu_income">Yearly Income</string>
    <string name="menu_household">Yearly Household Expenses </string>
    <string name="menu_bills">Yearly Bills</string>
    <string name="menu_personal">Yearly Personal Expenses</string>
    <string name="menu_transport">Yearly Transport Expenses</string>

    <!-- Info-->
    <string name="budget_info_1">Welcome user!</string>
    <!--   TODO: update the text-->
    <string name="budget_info_2">Text about this screen would be displayed.</string>

    <string name="personal">Personal Expenses</string>
    <string name="transport">Transport and Auto</string>


    <!-- Summary -->
    <string name="summary">Summary</string>
    <string name="expense">Expenses</string>


    <!--  Content Desc  -->
    <string name="logo">Logo</string>

    <!-- Button Text-->
    <string name="btn_next">Next</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_gallery">Save to Gallery</string>


    <!--    Services  -->
    <string name="service_info">To get started, please select how you would like to view the services:</string>
    <string name="service_all">View all the services</string>
    <string name="service_all_txt">All Services</string>
    <string name="service_suburb">Services by Suburb</string>
    <string name="service_categories">Services by Categories</string>

    <string name="tips_1">To get started, please the category you would like to view tips on:</string>
    <string name="title_activity_services_map">Map</string>

    <!--    Yoga  -->
    <string name="yoga_1">• Stand tall with big toes touching and heels together.\nDraw your abdominal in and up and relax your shoulders down and back.\nBreathe five to eight breaths while actively engaging your leg muscles.\n\n• Benefits:\nBalance and grounding through the feet.</string>
    <string name="yoga_2">• Stand tall, and place one foot on the opposite inner thigh, either above or below the knee. (start with Baby Tree or use a chair for support)\nOpen the leg to the side, bring your hands to prayer, and stay for five to eight breaths.\n\n• Benefits:\nBalance, concentration, leg and abdominal strength.</string>
    <string name="yoga_3">• Start kneeling, and stretch one arm forward and the opposite leg back.\nImagine you have a tea cup on your back and draw your belly button towards your spine.\nStay for a breath, then switch sides.\nRepeat five times.\n\n• Benefit:\nBalance, concentration, abdominal and back support.</string>
    <string name="yoga_4">• Start on hands and knees, tuck your toes under, and lift your hips up and back until your body forms a triangle.\nUse your core strength and legs to bring the weight back as much as possible.\nStay for five to eight breaths, lower down, and repeat two more times.\nFor seniors with wrist issues, do Forearm Downward Dog instead.\n\n• Benefits:\nJoint health, flexibility, and all-over body strength.</string>
    <string name="yoga_5">• Lie down on your stomach and place your forearms on the mat, elbows under your shoulders.\nPress firmly into the arms and draw your shoulder blades together and down your back.\nLift your abdominal in and up and stay for five to eight breaths.\n\n• Benefits:\nUpper back strength and preventing forward head syndrome.</string>
    <string name="yoga_6">• Sit tall and bring the soles of the feet together as you open your knees out to the sides.\nFold forward for a deeper stretch but try to prevent rounding too much in the lower back.\nHold for five to eight breaths.\n\n• Benefits:\nOpen hips, feet massage.</string>
    <string name="yoga_7">• Lie down and let the floor support you.\nCompletely relax the muscles and breathe as you lie there and take a deep, restorative break.\n\n• Benefits:\nAids nervous system, mental and physical peace.</string>

    <!--Get Started -->
    <string name="get_started">Get Ready!\n Your journey to improve your Financial and Mental well-being starts now!</string>
    <string name="get_started2">To begin, please select an option</string>
    <string name="get_started3">I want to improve my :</string>
    <string name="get_started4">Financial Well-being</string>
    <string name="get_started5">Mental Well-being</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_events_maps">Map</string>

    <!--  Help TExt  -->
    <style name="help_save">Budget Calculator: Use the calculator to get an overall analysis of your
        current budget\nSave My Earnings: Have a look at the list of saving tips we have compiled to
        figure where you can save more money\n View Services: Contains information on
        affordable/free services located around Melbourne that can assist you in saving your money
    </style>

</resources>
