<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Budgeting.HousingExpensesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/housing_exp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat" />

        <LinearLayout
            android:id="@+id/rent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rent_txt"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/household_rent"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_rent"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_rent"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/groceries_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/govt_groceries"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/household_groceries"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_groceries"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_groceries"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/house_other_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/house_other_txt"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/household_other"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_house_other"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_house_other"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_next"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_weight="0"
            android:background="@drawable/ovalbtn"
            android:gravity="center"
            android:text="@string/btn_save"
            android:textColor="#FFF" />
    </LinearLayout>
</ScrollView>