<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Budget.Calculator.PersonalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/personal"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:fontFamily="@font/montserrat" />

        <LinearLayout
            android:id="@+id/clothing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clothing_txt"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/personal_clothing"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_clothing"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_clothing"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_doc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_water"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/personal_doctor"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_doc"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_doc"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_entertainment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_entertainment"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/personal_entertainment"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_entertainment"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_entertainment"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_internet"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/personal_pet"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_pet"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_pet"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_other_personal"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0"
                    android:paddingLeft="3dp"
                    android:text="@string/personal_other"
                    android:textColor="#000000"
                    app:fontFamily="@font/montserrat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editText_other_personal"
                    android:layout_width="193dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#615D5D" />

                <Spinner
                    android:id="@+id/spinner_other_personal"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:prompt="@string/frequency"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_next"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_weight="0"
                android:background="@drawable/ovalbtn"
                android:gravity="center"
                android:text="@string/btn_save"
                android:textSize="18sp"
                android:textColor="#FFF" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>